# DataNexus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 30c32a1ad0b2_add_query_history_table.py  a1b2c3d4e5f6_phase2_schema_updates.py  b02d1acd707d_initial_tables.py  c201fe9340a3_add_role_column_to_users_table.py  d4e5f6a7b8c9_add_notification_channels_and_rule_channels.py  f7a8b9c0d1e2_add_api_key_prefix_to_users.py
backend/app/: main.py
backend/app/api/: alert.py  audit.py  custom_api.py  dashboard.py  datasource.py  deps.py  desensitize.py  metadata.py  permissions.py  query.py  rate_limit.py  router.py  user.py  user_mgmt.py
backend/app/core/: config.py  database.py  permissions.py  security.py
backend/app/datasource/: pool_manager.py
backend/app/mcp/: __init__.py  auth.py  server.py  transport.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  alert.py  audit.py  custom_api.py  datasource.py  desensitize.py  metadata.py  query_history.py  user.py
backend/app/schemas/: custom_api.py  datasource.py  desensitize.py  rate_limit.py  user.py
backend/app/services/: alert.py  audit.py  custom_api.py  datasource.py  desensitize.py  metadata.py  notification.py  query.py  query_history.py  rate_limit.py  security.py  sql_suggest.py
backend/tests/test_api/: test_health.py
backend/tests/test_mcp/: test_list_datasources.py  test_mcp_auth.py
(+55 files in other folders)
