[project]
name = "datanexus-backend"
version = "0.1.0"
description = "企业AI统一数据网关平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "sqlglot>=26.0.0",
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0"]
mssql = ["aioodbc>=0.5.0"]
oracle = ["oracledb>=2.0.0"]
all-drivers = ["aiomysql>=0.2.0", "aioodbc>=0.5.0", "oracledb>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
